--- a/.project
+++ b/.project
@@ -27,9 +27,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>src/main/java/photos/WhatsApp Image 2025-04-18 at 14.13.04.jpeg</name>
+			<name>src/main/resources/static/photos/profile.jpeg</name>
 			<type>1</type>
-			<location>C:/Users/AZcomputer/Downloads/WhatsApp Image 2025-04-18 at 14.13.04.jpeg</location>
+			<location>C:/Users/AZcomputer/Downloads/profile.jpeg</location>
 		</link>
 	</linkedResources>
 </projectDescription>
